--------------------------
* core: add signal "day_changed"
* core: remove unneeded space after time on each line if option
  weechat.look.buffer_time_format is set to empty value (bug #28751)
* gui: fix bug with global history, reset pointer to last entry after each user
  input (bug #28754)
* api: add missing infos in functions buffer_get_integer / buffer_get_string
  and in buffer infolist
* irc: fix bug with SSL connection (fails sometimes when ssl_verify is on)
  (bug #28741)
* irc: add options irc.look.smart_filter_join and irc.look.smart_filter_quit
* irc: fix compilation with old GnuTLS versions (bug #28723)
* logger: allow date format in logger options path and mask (task #9430)

Version 0.3.1 (2010-01-23)
--------------------------

* core: fix bug with script installation on BSD/OSX (patch #6980)
* core: add option grab_key_command for /input (bound by default to alt-k)
* core: fix compilation under Cygwin (patch #6916)
* core: fix cmake directories: let user customize lib, share, locale and include
  directories (patch #6922)
* core: fix plural form in translation files (bug #27430)
* core: fix terminal title bug: do not reset it when option
  weechat.look.set_title is off (bug #27399)
* core: fix buffer used by some input functions called via plugin API with
  buffer pointer (bug #28152)
* alias: new expansions for alias arguments ($n, $-m, $n-, $n-m, $*, $~)
  (patch #6917)
* alias: allow use of wildcards for /alias list (patch #6925)
* alias: allow /unalias to remove multiple aliases (patch #6926)
* alias: fix bug with buffer for execution of alias, when called from plugin API
  with function "command" (bug #27697)
* alias: fix bug with arguments (bug #27440)
* irc: add new commands /allchan and /allserv with excluding option, commands
  /ame and /amsg are now aliases, new aliases /aaway and /anick
* irc: add options to customize target buffer for messages (task #7381)
* irc: add new output queue for messages with low priority (like automatic CTCP